--- a/index.html
+++ b/index.html
@@ -6,17 +6,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Boostcwex — Поиск информации</title>
   <style>
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 30% 30%, rgba(255,0,0,0.05), transparent 70%),
+                  radial-gradient(circle at 70% 70%, rgba(255,0,0,0.05), transparent 70%);
+      background-repeat: no-repeat;
+      animation: smokeMove 20s linear infinite;
+      z-index: 0;
+    }
+
+    @keyframes smokeMove {
+      0% {
+        background-position: 30% 30%, 70% 70%;
+      }
+      50% {
+        background-position: 35% 25%, 65% 75%;
+      }
+      100% {
+        background-position: 30% 30%, 70% 70%;
+      }
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #0e0e0e;
       color: #f5f5f5;
-      animation: fadeInBody 1s ease-in;
-    }
-
-    @keyframes fadeInBody {
-      from { opacity: 0; }
-      to { opacity: 1; }
+      position: relative;
+      z-index: 1;
     }
 
     header {
@@ -24,47 +46,27 @@
       padding: 20px;
       text-align: center;
       border-bottom: 2px solid red;
-      animation: fadeInTop 1s ease-in;
     }
-
     header h1 {
       color: red;
       margin: 0;
     }
-
     .container {
       padding: 40px 20px;
       max-width: 800px;
       margin: auto;
     }
-
     .service {
       border: 1px solid red;
       border-radius: 10px;
       padding: 20px;
       margin-bottom: 20px;
       background-color: #1a1a1a;
-      opacity: 0;
-      transform: translateY(20px);
-      animation: fadeInUp 1s forwards;
     }
-
-    .service:nth-child(1) { animation-delay: 0.3s; }
-    .service:nth-child(2) { animation-delay: 0.6s; }
-    .service:nth-child(3) { animation-delay: 0.9s; }
-
-    @keyframes fadeInUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
     .service h2 {
       color: red;
       margin-top: 0;
     }
-
     .btn {
       display: inline-block;
       margin-top: 10px;
@@ -75,11 +77,9 @@
       border-radius: 5px;
       transition: background 0.3s ease;
     }
-
     .btn:hover {
       background-color: darkred;
     }
-
     footer {
       text-align: center;
       padding: 20px;
